[package]
name = "zksync-os-zisk-prover-service"
version = "0.1.0"
edition = "2024"
description = "ZiSK proof generation service for ZKsync OS multi-proof system"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
url = "2"
vise = "0.2"
